Changed Home and Description header,fixed search pager color thing. Made sure Librarian page not visible to normal members

--- a/CSS/Footer.css
+++ b/CSS/Footer.css
@@ -11,11 +11,8 @@
     margin: 10px;
 }
 
-footer{
-    padding: 10px;
-}
-
 /*New Footer*/
 footer {
     padding: 10px;
+    width: 100%;
 }
